@@ -17,6 +17,7 @@ import ru.practicum.application.user.client.UserClient;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -50,12 +51,12 @@ public class InnerEventServiceImpl implements InnerEventService {
     @Override
     public List<EventShortDto> getShortByIds(List<Long> ids) {
         List<Event> events = eventRepository.findAllById(ids);
-        Map<Long, UserDto> users = userClient.getUsersList(
-                events.stream().map(Event::getInitiator).collect(Collectors.toList()), 0, Math.max(events.size(), 1)
-        ).stream().collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
-        Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(
-                events.stream().map(Event::getCategory).collect(Collectors.toSet())
-        ).stream().collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
+        List<Long> usersIds = events.stream().map(Event::getInitiator).toList();
+        Set<Long> categoriesIds = events.stream().map(Event::getCategory).collect(Collectors.toSet());
+        Map<Long, UserDto> users = userClient.getUsersList(usersIds, 0, Math.max(events.size(), 1)).stream()
+                .collect(Collectors.toMap(UserDto::getId, userDto -> userDto));
+        Map<Long, CategoryDto> categories = categoryClient.getCategoriesByIds(categoriesIds).stream()
+                .collect(Collectors.toMap(CategoryDto::getId, categoryDto -> categoryDto));
 
         return events.stream().map(
                 e -> EventMapper.mapEventToShortDto(e, categories.get(e.getCategory()), users.get(e.getInitiator()))
